- update Automation framework packages

--- a/MenuCycle.Tests/App.config
+++ b/MenuCycle.Tests/App.config
@@ -5,6 +5,7 @@
         <section name="report" type="Fourth.Automation.Framework.Reporting.Configuration.ReportSection, Fourth.Automation.Framework.Reporting"/>
         <section name="fourth" type="Fourth.Automation.Framework.Configuration.FourthSection, Fourth.Automation.Framework.Core"/>
         <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
+        <section name="fourth" type="Fourth.Automation.Framework.Configuration.FourthSection, Fourth.Automation.Framework.Core"/>
     </configSections>
     <appSettings>
         <add key="Engage.Url" value="https://qapartial-fourth-app.cs87.force.com"/>
