Add test case for navigating to post-production weekly view - TC35467

--- a/MenuCycle.Tests/MenuCycle.Tests.csproj
+++ b/MenuCycle.Tests/MenuCycle.Tests.csproj
@@ -385,6 +385,7 @@
     <Compile Include="Models\RecipeModelPostProducton.cs" />
     <Compile Include="PageObjects\Planning\PostProductionTabDays\RecipePostProduction.cs" />
     <Compile Include="PageObjects\Planning\PostProductionTabDays\BuffetPostProduction.cs" />
+    <Compile Include="PageObjects\Planning\PostProductionTab\PostProductionTabWeeks.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.Chrome.config">
