- enable taking screenshots on Chrome

--- a/MenuCycle.Tests/App.Chrome.config
+++ b/MenuCycle.Tests/App.Chrome.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
   <fourth driverType="Chrome" serverUrl="" driverDirectory="" xdt:Transform="Replace">
-    <reporting keepScreenshot="false" takeScreenshotOnError="false" />
+    <reporting keepScreenshot="true" takeScreenshotOnError="true" />
     <timeout driverCommands="00:03:00"/>
     <capabilities>
       <add key="--start-maximized"/>
