--- a/MenuCycle.Tests/packages.config
+++ b/MenuCycle.Tests/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Appium.WebDriver" version="4.0.0.1-beta" targetFramework="net471" />
   <package id="Autofac" version="4.6.2" targetFramework="net471" />
+  <package id="BoDi" version="1.4.0-alpha1" targetFramework="net471" />
   <package id="Castle.Core" version="4.3.1" targetFramework="net471" />
   <package id="DotNetSeleniumExtras.PageObjects" version="3.11.0" targetFramework="net462" />
   <package id="DotNetSeleniumExtras.WaitHelpers" version="3.11.0" targetFramework="net462" />
@@ -10,6 +11,7 @@
   <package id="Fourth.Automation.Framework.Mobile" version="4.1.58" targetFramework="net471" />
   <package id="Fourth.Automation.Framework.Reporting" version="4.2.62" targetFramework="net471" />
   <package id="FourthApp.Pages" version="1.0.11" targetFramework="net471" />
+  <package id="Gherkin" version="5.1.0" targetFramework="net471" />
   <package id="ImpromptuInterface" version="7.0.1" targetFramework="net471" />
   <package id="log4net" version="2.0.8" targetFramework="net462" />
   <package id="Microsoft.CSharp" version="4.5.0" targetFramework="net471" />
@@ -46,14 +48,18 @@
   <package id="System.Net.Primitives" version="4.3.0" targetFramework="net462" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="net462" />
   <package id="System.Reflection" version="4.3.0" targetFramework="net462" />
+  <package id="System.Reflection.Emit" version="4.3.0" targetFramework="net471" />
+  <package id="System.Reflection.Emit.Lightweight" version="4.3.0" targetFramework="net471" />
   <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="net462" />
   <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="net462" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net462" />
   <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="net471" />
   <package id="System.Threading" version="4.3.0" targetFramework="net462" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net462" />
+  <package id="System.Threading.Tasks.Extensions" version="4.4.0" targetFramework="net471" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net462" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net471" />
   <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="net462" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net471" />
+  <package id="Utf8Json" version="1.3.7" targetFramework="net471" />
 </packages>
