--- a/MenuCycle.Tests/MenuCycle.Tests.csproj
+++ b/MenuCycle.Tests/MenuCycle.Tests.csproj
@@ -231,16 +231,16 @@
       <HintPath>..\packages\Castle.Core.4.3.1\lib\net45\Castle.Core.dll</HintPath>
     </Reference>
     <Reference Include="Fourth.Automation.Framework.Core">
-      <HintPath>..\packages\Fourth.Automation.Framework.Core.4.2.62\lib\net45\Fourth.Automation.Framework.Core.dll</HintPath>
+      <HintPath>..\packages\Fourth.Automation.Framework.Core.4.2.63\lib\net45\Fourth.Automation.Framework.Core.dll</HintPath>
     </Reference>
     <Reference Include="Fourth.Automation.SpecFlow.Extensions">
-      <HintPath>..\packages\Fourth.Automation.Framework.Core.4.2.62\lib\net45\Fourth.Automation.SpecFlow.Extensions.dll</HintPath>
+      <HintPath>..\packages\Fourth.Automation.Framework.Core.4.2.63\lib\net45\Fourth.Automation.SpecFlow.Extensions.dll</HintPath>
     </Reference>
     <Reference Include="SpecFlow.Autofac.SpecFlowPlugin">
-      <HintPath>..\packages\Fourth.Automation.Framework.Core.4.2.62\lib\net45\SpecFlow.Autofac.SpecFlowPlugin.dll</HintPath>
+      <HintPath>..\packages\Fourth.Automation.Framework.Core.4.2.63\lib\net45\SpecFlow.Autofac.SpecFlowPlugin.dll</HintPath>
     </Reference>
     <Reference Include="Fourth.Automation.Framework.Reporting">
-      <HintPath>..\packages\Fourth.Automation.Framework.Reporting.4.2.62\lib\net45\Fourth.Automation.Framework.Reporting.dll</HintPath>
+      <HintPath>..\packages\Fourth.Automation.Framework.Reporting.4.2.63\lib\net45\Fourth.Automation.Framework.Reporting.dll</HintPath>
     </Reference>
     <Reference Include="WebDriver">
       <HintPath>..\packages\Selenium.WebDriver.3.141.0\lib\net45\WebDriver.dll</HintPath>
@@ -255,10 +255,10 @@
       <HintPath>..\packages\System.Json.4.5.0\lib\netstandard2.0\System.Json.dll</HintPath>
     </Reference>
     <Reference Include="Fourth.Automation.Framework.Mobile">
-      <HintPath>..\packages\Fourth.Automation.Framework.Mobile.4.1.58\lib\net45\Fourth.Automation.Framework.Mobile.dll</HintPath>
+      <HintPath>..\packages\Fourth.Automation.Framework.Mobile.4.2.63\lib\net45\Fourth.Automation.Framework.Mobile.dll</HintPath>
     </Reference>
     <Reference Include="FourthApp">
-      <HintPath>..\packages\FourthApp.Pages.1.0.11\lib\net46\FourthApp.dll</HintPath>
+      <HintPath>..\packages\FourthApp.Pages.1.0.15\lib\net46\FourthApp.dll</HintPath>
     </Reference>
     <Reference Include="appium-dotnet-driver">
       <HintPath>..\packages\Appium.WebDriver.4.0.0.1-beta\lib\net45\appium-dotnet-driver.dll</HintPath>
@@ -267,13 +267,16 @@
       <HintPath>..\packages\BoDi.1.4.0-alpha1\lib\net45\BoDi.dll</HintPath>
     </Reference>
     <Reference Include="Gherkin">
-      <HintPath>..\packages\Gherkin.5.1.0\lib\net45\Gherkin.dll</HintPath>
+      <HintPath>..\packages\Gherkin.6.0.0\lib\net45\Gherkin.dll</HintPath>
     </Reference>
     <Reference Include="System.Threading.Tasks.Extensions">
       <HintPath>..\packages\System.Threading.Tasks.Extensions.4.4.0\lib\netstandard2.0\System.Threading.Tasks.Extensions.dll</HintPath>
     </Reference>
     <Reference Include="Utf8Json">
       <HintPath>..\packages\Utf8Json.1.3.7\lib\net47\Utf8Json.dll</HintPath>
+    </Reference>
+    <Reference Include="Appium.Net">
+      <HintPath>..\packages\Appium.WebDriver.4.0.0.5-beta\lib\net45\Appium.Net.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
