--- a/MenuCycle.Tests/App.Chrome.config
+++ b/MenuCycle.Tests/App.Chrome.config
@@ -4,7 +4,7 @@
     <reporting keepScreenshot="false" takeScreenshotOnError="false" />
     <timeout driverCommands="00:03:00"/>
     <capabilities>
-      <add key="--start-maximized" />
+      <add key="--dns-prefetch-disable" />
     </capabilities>
   </fourth>
 </configuration>
