- change logic for exclude tags to the original version

--- a/MenuCycle.Tests/Jenkinsfile
+++ b/MenuCycle.Tests/Jenkinsfile
@@ -249,15 +249,9 @@ def runTests(device)
 			{
 				excludeTags.each
 				{
-					def or = isFirstTag ? '' : " || "
+					def or = isFirstTag ? '' : " && "
 					exclude += "${or}cat != ${it}"
 					isFirstTag = false
-				}
-
-				// If there are include tags, group exclude tags together
-				if (include != '')
-				{
-					exclude = '(' + exclude + ')';
 				}
 			}
 
