- add Wait helper class  - Wait for animation method

--- a/MenuCycle.Tests/MenuCycle.Tests.csproj
+++ b/MenuCycle.Tests/MenuCycle.Tests.csproj
@@ -422,6 +422,7 @@
     <Compile Include="PageObjects\Planning\PlanningTabWeeks\PlanningWeekMealPeriod.cs" />
     <Compile Include="PageObjects\Planning\PostProductionTabWeeks\PostProductionDayRow.cs" />
     <Compile Include="PageObjects\Planning\PostProductionTabWeeks\PostProductionWeekMealPeriod.cs" />
+    <Compile Include="Support\Helpers\Wait.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.Chrome.config">
