--- a/MenuCycle.Tests/App.config
+++ b/MenuCycle.Tests/App.config
@@ -9,7 +9,7 @@
     <appSettings>
         <add key="Engage.Url" value="https://qapartial-fourth-app.cs87.force.com"/>
         <add key="Engage.User" value="martin.petkov@fourth.com"/>
-        <add key="Engage.Password" value="Mypassword_004"/>
+        <add key="Engage.Password" value="Mypasssword_006"/>
     </appSettings>
     <runtime>
         <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
