Add config file for Long TimeOut for IE

--- a/MenuCycle.Tests/MenuCycle.Tests.csproj
+++ b/MenuCycle.Tests/MenuCycle.Tests.csproj
@@ -144,6 +144,11 @@
     <OutputPath>bin\ChromeLongTimeOut</OutputPath>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'IELongTimeOut|AnyCPU' ">
+    <Optimize>false</Optimize>
+    <OutputPath>bin\IELongTimeOut</OutputPath>
+    <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="log4net, Version=2.0.8.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
       <HintPath>..\packages\log4net.2.0.8\lib\net45-full\log4net.dll</HintPath>
@@ -528,6 +533,7 @@
     <None Include="App.ChromeLongTimeOut.config">
       <SubType>Designer</SubType>
     </None>
+    <None Include="App.IELongTimeOut.config" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
