--- a/MenuCycle.Tests/App.config
+++ b/MenuCycle.Tests/App.config
@@ -15,7 +15,7 @@
         <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
             <dependentAssembly>
                 <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral"/>
-                <bindingRedirect oldVersion="0.0.0.0-11.0.0.0" newVersion="11.0.0.0"/>
+                <bindingRedirect oldVersion="0.0.0.0-11.0.0.0" newVersion="12.0.0.0"/>
             </dependentAssembly>
             <dependentAssembly>
                 <assemblyIdentity name="System.ValueTuple" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral"/>
@@ -32,6 +32,10 @@
             <dependentAssembly>
                 <assemblyIdentity name="TechTalk.SpecFlow" publicKeyToken="0778194805d6db41" culture="neutral"/>
                 <bindingRedirect oldVersion="0.0.0.0-2.3.2.0" newVersion="2.3.2.0"/>
+            </dependentAssembly>
+            <dependentAssembly>
+                <assemblyIdentity name="Autofac" publicKeyToken="17863af14b0044da" culture="neutral"/>
+                <bindingRedirect oldVersion="0.0.0.0-4.9.2.0" newVersion="4.9.2.0"/>
             </dependentAssembly>
         </assemblyBinding>
     </runtime>
