--- a/MenuCycle.Tests/packages.config
+++ b/MenuCycle.Tests/packages.config
@@ -1,27 +1,27 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Appium.WebDriver" version="4.0.0.1-beta" targetFramework="net471" />
-  <package id="Autofac" version="4.6.2" targetFramework="net471" />
+  <package id="Appium.WebDriver" version="4.0.0.6-beta" targetFramework="net471" />
+  <package id="Autofac" version="4.9.2" allowedVersions="4.6.2.0" targetFramework="net471" />
   <package id="BoDi" version="1.4.0-alpha1" targetFramework="net471" />
   <package id="Castle.Core" version="4.3.1" targetFramework="net471" />
   <package id="DotNetSeleniumExtras.PageObjects" version="3.11.0" targetFramework="net462" />
   <package id="DotNetSeleniumExtras.WaitHelpers" version="3.11.0" targetFramework="net462" />
   <package id="Dynamitey" version="2.0.9.136" targetFramework="net471" />
-  <package id="Fourth.Automation.Framework.Core" version="4.2.63" targetFramework="net471" />
-  <package id="Fourth.Automation.Framework.Mobile" version="4.1.58" targetFramework="net471" />
+  <package id="Fourth.Automation.Framework.Core" version="4.3.67" targetFramework="net471" />
+  <package id="Fourth.Automation.Framework.Mobile" version="4.3.67" targetFramework="net471" />
   <package id="Fourth.Automation.Framework.Reporting" version="4.2.63" targetFramework="net471" />
-  <package id="FourthApp.Pages" version="1.0.12" targetFramework="net471" />
+  <package id="FourthApp.Pages" version="1.0.17" targetFramework="net471" />
   <package id="Gherkin" version="6.0.0" targetFramework="net471" />
   <package id="ImpromptuInterface" version="7.0.1" targetFramework="net471" />
   <package id="log4net" version="2.0.8" targetFramework="net462" />
   <package id="Microsoft.CSharp" version="4.5.0" targetFramework="net471" />
   <package id="Microsoft.NETCore.Platforms" version="2.2.0" targetFramework="net471" />
   <package id="NETStandard.Library" version="2.0.3" targetFramework="net471" />
-  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net471" />
+  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net471" />
   <package id="NUnit" version="3.7.1" targetFramework="net462" />
   <package id="Polly" version="5.9.0" targetFramework="net471" />
-  <package id="Selenium.Support" version="3.12.1" targetFramework="net471" />
-  <package id="Selenium.WebDriver" version="3.12.1" targetFramework="net471" />
+  <package id="Selenium.Support" version="3.141.0" targetFramework="net471" />
+  <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net471" />
   <package id="Selenium.WebDriver.ChromeDriver" version="74.0.3729.6-beta" targetFramework="net471" />
   <package id="Selenium.WebDriver.GeckoDriver" version="0.24.0" targetFramework="net471" />
   <package id="Selenium.WebDriver.IEDriver" version="3.141.59" targetFramework="net471" />
@@ -58,7 +58,7 @@
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net462" />
   <package id="System.Threading.Tasks.Extensions" version="4.4.0" targetFramework="net471" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net462" />
-  <package id="System.ValueTuple" version="4.4.0" targetFramework="net471" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net471" />
   <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="net462" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net471" />
   <package id="Utf8Json" version="1.3.7" targetFramework="net471" />
