--- a/MenuCycle.Tests/App.config
+++ b/MenuCycle.Tests/App.config
@@ -1,85 +1,89 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <section name="specFlow" type="TechTalk.SpecFlow.Configuration.ConfigurationSectionHandler, TechTalk.SpecFlow"/>
-        <section name="report" type="Fourth.Automation.Framework.Reporting.Configuration.ReportSection, Fourth.Automation.Framework.Reporting"/>
-        <section name="fourth" type="Fourth.Automation.Framework.Configuration.FourthSection, Fourth.Automation.Framework.Core"/>
-        <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
+        <section name="specFlow" type="TechTalk.SpecFlow.Configuration.ConfigurationSectionHandler, TechTalk.SpecFlow" />
+        <section name="report" type="Fourth.Automation.Framework.Reporting.Configuration.ReportSection, Fourth.Automation.Framework.Reporting" />
+        <section name="fourth" type="Fourth.Automation.Framework.Configuration.FourthSection, Fourth.Automation.Framework.Core" />
+        <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
     </configSections>
     <appSettings>
-        <add key="Engage.Url" value="https://qapartial-fourth-app.cs87.force.com"/>
-        <add key="Engage.User" value="martin.petkov@fourth.com"/>
-        <add key="Engage.Password" value="Mypasssword_006"/>
+        <add key="Engage.Url" value="https://qapartial-fourth-app.cs87.force.com" />
+        <add key="Engage.User" value="martin.petkov@fourth.com" />
+        <add key="Engage.Password" value="Mypasssword_006" />
     </appSettings>
     <runtime>
         <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
             <dependentAssembly>
-                <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral"/>
-                <bindingRedirect oldVersion="0.0.0.0-11.0.0.0" newVersion="12.0.0.0"/>
+                <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+                <bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0" />
             </dependentAssembly>
             <dependentAssembly>
-                <assemblyIdentity name="System.ValueTuple" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral"/>
-                <bindingRedirect oldVersion="0.0.0.0-4.0.2.0" newVersion="4.0.2.0"/>
+                <assemblyIdentity name="System.ValueTuple" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+                <bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
             </dependentAssembly>
             <dependentAssembly>
-                <assemblyIdentity name="Castle.Core" publicKeyToken="407dd0808d44fbdc" culture="neutral"/>
-                <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0"/>
+                <assemblyIdentity name="Castle.Core" publicKeyToken="407dd0808d44fbdc" culture="neutral" />
+                <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
             </dependentAssembly>
             <dependentAssembly>
-                <assemblyIdentity name="Remotion.Linq" publicKeyToken="fee00910d6e5f53b" culture="neutral"/>
-                <bindingRedirect oldVersion="0.0.0.0-2.2.0.0" newVersion="2.2.0.0"/>
+                <assemblyIdentity name="Remotion.Linq" publicKeyToken="fee00910d6e5f53b" culture="neutral" />
+                <bindingRedirect oldVersion="0.0.0.0-2.2.0.0" newVersion="2.2.0.0" />
             </dependentAssembly>
             <dependentAssembly>
-                <assemblyIdentity name="TechTalk.SpecFlow" publicKeyToken="0778194805d6db41" culture="neutral"/>
-                <bindingRedirect oldVersion="0.0.0.0-2.3.2.0" newVersion="2.3.2.0"/>
+                <assemblyIdentity name="TechTalk.SpecFlow" publicKeyToken="0778194805d6db41" culture="neutral" />
+                <bindingRedirect oldVersion="0.0.0.0-2.3.2.0" newVersion="2.3.2.0" />
             </dependentAssembly>
             <dependentAssembly>
-                <assemblyIdentity name="Autofac" publicKeyToken="17863af14b0044da" culture="neutral"/>
-                <bindingRedirect oldVersion="0.0.0.0-4.9.2.0" newVersion="4.9.2.0"/>
+                <assemblyIdentity name="Autofac" publicKeyToken="17863af14b0044da" culture="neutral" />
+                <bindingRedirect oldVersion="0.0.0.0-4.9.2.0" newVersion="4.9.2.0" />
             </dependentAssembly>
             <dependentAssembly>
-                <assemblyIdentity name="System.ValueTuple" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral"/>
-                <bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0"/>
+                <assemblyIdentity name="ImpromptuInterface" publicKeyToken="0b1781c923b2975b" culture="neutral" />
+                <bindingRedirect oldVersion="0.0.0.0-7.0.1.0" newVersion="7.0.1.0" />
+            </dependentAssembly>
+            <dependentAssembly>
+                <assemblyIdentity name="nunit.framework" publicKeyToken="2638cd05610744eb" culture="neutral" />
+                <bindingRedirect oldVersion="0.0.0.0-3.7.1.0" newVersion="3.7.1.0" />
             </dependentAssembly>
         </assemblyBinding>
     </runtime>
     <startup>
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2"/>
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2" />
     </startup>
     <specFlow>
         <stepAssemblies>
             <!-- This attribute is required in order to use StepArgument Transformation as described here; 
     https://github.com/marcusoftnet/SpecFlow.Assist.Dynamic/wiki/Step-argument-transformations  -->
-            <stepAssembly assembly="Fourth.Automation.Framework.Reporting"/>
-            <stepAssembly assembly="Fourth.Automation.Framework.Core"/>
-            <stepAssembly assembly="Fourth.Automation.SpecFlow.Extensions"/>
+            <stepAssembly assembly="Fourth.Automation.Framework.Reporting" />
+            <stepAssembly assembly="Fourth.Automation.Framework.Core" />
+            <stepAssembly assembly="Fourth.Automation.SpecFlow.Extensions" />
         </stepAssemblies>
         <plugins>
-            <add name="SpecFlow.Autofac" type="Runtime"/>
+            <add name="SpecFlow.Autofac" type="Runtime" />
         </plugins>
         <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config -->
     <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config --><!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config --></specFlow>
     <report reportName="" filePath="">
     </report>
     <fourth driverType="" serverUrl="" driverDirectory="">
-        <reporting keepScreenshot="false" takeScreenshotOnError="false"/>
-        <timeout driverCommands="00:00:59" defaultWait="00:00:59"/>
+        <reporting keepScreenshot="false" takeScreenshotOnError="false" />
+        <timeout driverCommands="00:00:59" defaultWait="00:00:59" />
         <capabilities>
         </capabilities>
     </fourth>
     <log4net>
         <appender name="RollingFile" type="log4net.Appender.RollingFileAppender">
-            <file value="AppiumServerLogs.txt"/>
-            <appendToFile value="true"/>
-            <maximumFileSize value="100KB"/>
-            <maxSizeRollBackups value="2"/>
+            <file value="AppiumServerLogs.txt" />
+            <appendToFile value="true" />
+            <maximumFileSize value="100KB" />
+            <maxSizeRollBackups value="2" />
             <layout type="log4net.Layout.PatternLayout">
-                <conversionPattern value="%level %thread %logger - %message%newline"/>
+                <conversionPattern value="%level %thread %logger - %message%newline" />
             </layout>
         </appender>
         <logger name="Fourth.Automation.Framework.Mobile.Appium.AppiumServer">
-            <level value="ALL"/>
-            <appender-ref ref="RollingFile"/>
+            <level value="ALL" />
+            <appender-ref ref="RollingFile" />
         </logger>
     </log4net>
 </configuration>
