--- a/MenuCycle.Tests/packages.config
+++ b/MenuCycle.Tests/packages.config
@@ -19,6 +19,7 @@
   <package id="NETStandard.Library" version="2.0.3" targetFramework="net471" />
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net471" />
   <package id="NUnit" version="3.7.1" targetFramework="net462" />
+  <package id="NUnit3TestAdapter" version="3.13.0" targetFramework="net471" />
   <package id="Polly" version="5.9.0" targetFramework="net471" />
   <package id="Selenium.Support" version="3.141.0" targetFramework="net471" />
   <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net471" />
