- rename environment config

--- a/MenuCycle.Tests/MenuCycle.Tests.csproj
+++ b/MenuCycle.Tests/MenuCycle.Tests.csproj
@@ -550,7 +550,7 @@
     <None Include="App.RemoteIE.config">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Support\EnvironmentConfig.json">
+    <None Include="Support\Environment.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
